<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.documentsapp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_edit"
            app:destination="@id/nav_edit_images" />
        <action
            android:id="@+id/action_nav_home_to_nav_signature"
            app:destination="@id/nav_signature" />
        <action
            android:id="@+id/action_nav_home_to_nav_pdf_view"
            app:destination="@id/nav_pdf_view" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.documentsapp.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.documentsapp.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_nav_camera_to_nav_edit"
            app:destination="@id/nav_edit_images" />
        <action
            android:id="@+id/action_nav_camera_to_nav_crop"
            app:destination="@id/nav_crop" />
    </fragment>

    <fragment
        android:id="@+id/nav_crop"
        android:name="com.example.documentsapp.CropFragment"
        android:label="Crop Document"
        tools:layout="@layout/fragment_crop">
        <argument
            android:name="imageUri"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_crop_to_nav_edit"
            app:destination="@id/nav_edit_images" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_images"
        android:name="com.example.documentsapp.EditImagesFragment"
        android:label="Edit Images"
        tools:layout="@layout/fragment_edit_images">
        <argument
            android:name="documentUri"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_nav_edit_to_pdf_view"
            app:destination="@id/nav_pdf_view" />
    </fragment>

    <fragment
        android:id="@+id/nav_pdf_view"
        android:name="com.example.documentsapp.PdfViewFragment"
        android:label="PDF View"
        tools:layout="@layout/fragment_pdf_view">
        <argument
            android:name="documentUri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_signature"
        android:name="com.example.documentsapp.ui.SignatureListFragment"
        android:label="@string/title_signature"
        tools:layout="@layout/fragment_signature_list">
        <argument
            android:name="origin"
            app:argType="string"
            android:defaultValue="home" />
        <action
            android:id="@+id/action_nav_signature_list_to_nav_signature_selection"
            app:destination="@id/nav_signature_selection" />
    </fragment>

    <fragment
        android:id="@+id/nav_signature_selection"
        android:name="com.example.documentsapp.SignatureFragment"
        android:label="@string/title_signature"
        tools:layout="@layout/fragment_signature">
        <action
            android:id="@+id/action_nav_signature_to_nav_digital"
            app:destination="@id/nav_digital_signature" />
        <action
            android:id="@+id/action_nav_signature_to_nav_svg"
            app:destination="@id/nav_svg_signature" />
    </fragment>

    <fragment
        android:id="@+id/nav_digital_signature"
        android:name="com.example.documentsapp.DigitalSignatureFragment"
        android:label="@string/title_digital_signature"
        tools:layout="@layout/fragment_digital_signature">
        <action
            android:id="@+id/action_nav_digital_to_help"
            app:destination="@id/nav_digital_signature_help" />
    </fragment>

    <fragment
        android:id="@+id/nav_digital_signature_help"
        android:name="com.example.documentsapp.DigitalSignatureHelpFragment"
        android:label="@string/title_digital_signature_help"
        tools:layout="@layout/fragment_digital_signature_help" />

    <fragment
        android:id="@+id/nav_svg_signature"
        android:name="com.example.documentsapp.SvgSignatureFragment"
        android:label="@string/title_svg_signature"
        tools:layout="@layout/fragment_svg_signature" />

</navigation>
